add some hover effect

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- nav button section -->
         <button
-          class="bg-[#0C8BFD] border-none rounded-[50px] ssm:px-6 ssm:py-1 md:px-9 md:py-2 lg:px-10 lg:py-2 text-white"
+          class="bg-[#0C8BFD] border-none rounded-[50px] ssm:px-6 ssm:py-1 md:px-9 md:py-2 lg:px-10 lg:py-2 text-white hover:bg-white hover:text-[#0C8BFD]"
         >
           Login
         </button>
@@ -91,13 +91,13 @@
             class="flex flex-row justify-center items-center gap-6 md:gap-8 ssm:mt-10 lg:mt-14"
           >
             <button
-              class="bg-[#0C8BFD] border-none rounded-[50px] ssm:px-6 ssm:py-2 ssm:text-[12px] lg:px-10 lg:py-2 text-white"
+              class="bg-[#0C8BFD] border-none rounded-[50px] ssm:px-6 ssm:py-2 ssm:text-[12px] lg:px-10 lg:py-2 text-white hover:bg-white hover:text-[#0C8BFD]"
             >
               Login
             </button>
 
             <button
-              class="bg-[#0C8BFD] border-none rounded-[50px] ssm:px-6 ssm:py-2 md:px-8 md:py-2 lg:px-10 lg:py-2 text-white ssm:text-[12px] md:text-[14px]"
+              class="bg-[#0C8BFD] border-none rounded-[50px] ssm:px-6 ssm:py-2 md:px-8 md:py-2 lg:px-10 lg:py-2 text-white ssm:text-[12px] md:text-[14px] hover:bg-white hover:text-[#0C8BFD]"
             >
               Try Start Free
             </button>
@@ -226,18 +226,18 @@
           <!-- left box -->
           <div class="lg:w-[40%] flex flex-col gap-8">
             <div
-              class="flex flex-row justify-between items-center bg-[#0C8BFD] ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 rounded-[50px]"
+              class="flex flex-row justify-between items-center bg-[#0C8BFD] ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 rounded-[50px] text-white hover:cursor-pointer"
             >
-              <span class="text-white">Our main features</span>
+              <span class="">Our main features</span>
               <img
-                class="w-[25px]"
-                src="./assets/Icons/Group 238511.svg"
+                class="w-[25px] stroke-black-800"
+                src="./assets/Icons/Group-238511.svg"
                 alt=""
               />
             </div>
 
             <div
-              class="flex flex-row justify-between items-center border-2 ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 rounded-[50px]"
+              class="flex flex-row justify-between items-center border-2 ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 rounded-[50px] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <span class="">Speed optimization</span>
               <img
@@ -248,7 +248,7 @@
             </div>
 
             <div
-              class="flex flex-row justify-between gap-8 items-center rounded-[50px] ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 border-2"
+              class="flex flex-row justify-between gap-8 items-center rounded-[50px] ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 border-2 hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <span class="">Downtime and security optimization</span>
               <img
@@ -259,7 +259,7 @@
             </div>
 
             <div
-              class="flex flex-row justify-between items-center ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 rounded-[50px] border-2"
+              class="flex flex-row justify-between items-center ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 rounded-[50px] border-2 hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <span class="">Additional features</span>
               <img
@@ -270,7 +270,7 @@
             </div>
 
             <div
-              class="flex flex-row justify-between items-center rounded-[50px] border-2 ssm:px-6 ssm:py-4 lg:px-6 lg:py-8"
+              class="flex flex-row justify-between items-center rounded-[50px] border-2 ssm:px-6 ssm:py-4 lg:px-6 lg:py-8 hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <span class="">Best technical support service</span>
               <img
@@ -287,7 +287,7 @@
           >
             <!-- box-1 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -298,7 +298,7 @@
 
             <!-- box-2 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -309,7 +309,7 @@
 
             <!-- box-3 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -320,7 +320,7 @@
 
             <!-- box-4 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -331,7 +331,7 @@
 
             <!-- box-5 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -342,7 +342,7 @@
 
             <!-- box-6 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -353,7 +353,7 @@
 
             <!-- box-7 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -364,7 +364,7 @@
 
             <!-- box-8 -->
             <div
-              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828]"
+              class="flex flex-row justify-start items-center rounded-[50px] px-6 py-4 bg-[#292828] hover:text-white hover:bg-[#0C8BFD] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
             >
               <div
                 class="w-[15px] h-[15px] rounded-full bg-gray-300 mr-5"
@@ -402,7 +402,10 @@
       <div
         class="flex ssm:flex-col lg:flex-row lg:flex-wrap justify-center items-center gap-8 py-16"
       >
-        <div aria-label="regular box" class="px-8 py-8 bg-white rounded-[30px]">
+        <div
+          aria-label="regular box"
+          class="px-8 py-8 bg-white rounded-[30px] hover:text-white hover:bg-[#686666] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
+        >
           <div class="flex flex-col justify-center items-start gap-3">
             <strong class="text-[25px]">Regular</strong>
             <strong class="text-[35px]"
@@ -448,7 +451,7 @@
           </ul>
 
           <button
-            class="bg-[#0C8BFD] w-[96%] text-white rounded-[30px] py-3 mt-7"
+            class="bg-[#0C8BFD] w-[96%] text-white rounded-[30px] py-3 mt-7 hover:bg-white hover:text-[#0C8BFD] transition duration-150 ease-out hover:ease-in"
           >
             Select
           </button>
@@ -457,7 +460,7 @@
         <!-- second container -->
         <div
           aria-label="standard box"
-          class="px-8 py-8 rounded-[30px] bg-[#0C8BFD] text-white"
+          class="px-8 py-8 rounded-[30px] bg-[#0C8BFD] text-white hover:cursor-pointer"
         >
           <div class="flex flex-col justify-center items-start gap-3">
             <strong class="text-[25px]">Standard</strong>
@@ -474,43 +477,46 @@
           <!-- plan section -->
           <ul class="flex flex-col items-start justify-center gap-6 mt-8">
             <li class="flex flex-row justify-center items-center gap-3">
-              <img src="./assets/Icons/blue-tick.svg" alt="" />Up to 16,000
+              <img src="./assets/Icons/white-tick.svg" alt="" />Up to 16,000
               Visitors/Month
             </li>
             <li
               class="flex flex-row justify-center items-center gap-3 font-medium"
             >
-              <img src="./assets/Icons/blue-tick.svg" alt="" />500MB SSD Disk
+              <img src="./assets/Icons/white-tick.svg" alt="" />500MB SSD Disk
               Space
             </li>
             <li class="flex flex-row justify-center items-center gap-3">
-              <img src="./assets/Icons/blue-tick.svg" alt="" /> Unlimited
+              <img src="./assets/Icons/white-tick.svg" alt="" /> Unlimited
               Bandwidth
             </li>
             <li class="flex flex-row justify-center items-center gap-3">
-              <img src="./assets/Icons/blue-tick.svg" alt="" /> Unlimited
+              <img src="./assets/Icons/white-tick.svg" alt="" /> Unlimited
               Database
             </li>
             <li class="flex flex-row justify-center items-center gap-3">
-              <img src="./assets/Icons/blue-tick.svg" alt="" />Instant Backup
+              <img src="./assets/Icons/white-tick.svg" alt="" />Instant Backup
             </li>
             <li class="flex flex-row justify-center items-center gap-3">
-              <img src="./assets/Icons/blue-tick.svg" alt="" />1 Email Account
+              <img src="./assets/Icons/white-tick.svg" alt="" />1 Email Account
             </li>
             <li class="flex flex-row justify-center items-center gap-3">
-              <img src="./assets/Icons/blue-tick.svg" alt="" />1 Domain
+              <img src="./assets/Icons/white-tick.svg" alt="" />1 Domain
             </li>
           </ul>
 
           <button
-            class="bg-white w-[96%] text-[#0c8bfd] rounded-[30px] py-3 mt-7"
+            class="bg-white w-[96%] text-[#0c8bfd] rounded-[30px] py-3 mt-7 hover:bg-[#686666] hover:text-[#fff] transition duration-150 ease-out hover:ease-in"
           >
             Select
           </button>
         </div>
 
         <!-- third container -->
-        <div aria-label="premium box" class="px-8 py-8 bg-white rounded-[30px]">
+        <div
+          aria-label="premium box"
+          class="px-8 py-8 bg-white rounded-[30px] hover:text-white hover:bg-[#686666] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
+        >
           <div class="flex flex-col justify-center items-start gap-3">
             <strong class="text-[25px]">Premium</strong>
             <strong class="text-[35px]"
@@ -555,7 +561,7 @@
           </ul>
 
           <button
-            class="bg-[#0C8BFD] w-[96%] text-white rounded-[30px] py-3 mt-7"
+            class="bg-[#0C8BFD] w-[96%] text-white rounded-[30px] py-3 mt-7 hover:bg-white hover:text-[#0C8BFD] transition duration-150 ease-out hover:ease-in"
           >
             Select
           </button>
@@ -589,7 +595,7 @@
         class="grid ssm:grid-cols-1 ssm:grid-rows-2 ssm:justify-items-center ssm:items-center md:grid-cols-2 md:grid-rows-1 gap-20 md:gap-8 w-[100%]"
       >
         <div
-          class="flex flex-col justify-center items-start gap-4 bg-[#111010] px-6 py-7 rounded-[20px]"
+          class="flex flex-col justify-center items-start gap-4 bg-[#111010] px-6 py-7 rounded-[20px] hover:text-white hover:bg-[#686666] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
         >
           <div class="flex flex-row">
             <img
@@ -616,7 +622,7 @@
 
         <!-- review 2 -->
         <div
-          class="flex flex-col justify-center items-start gap-4 bg-white px-6 py-7 rounded-[20px] border-2 border-gray-300"
+          class="flex flex-col justify-center items-start gap-4 bg-white px-6 py-7 rounded-[20px] border-2 border-gray-300 hover:text-white hover:bg-[#000] transition duration-150 ease-out hover:ease-in hover:cursor-pointer"
         >
           <div class="flex flex-row">
             <img
@@ -664,22 +670,22 @@
         class="bg-[#292828] py-14 ssm:px-6 lg:px-10 xl:px-20 flex ssm:flex-col lg:flex-row justify-center items-center gap-6 lg:gap-3 rounded-[30px]"
       >
         <input
-          class="bg-gray-500 px-6 lg:px-4 py-3 rounded-[50px]"
+          class="bg-gray-500 px-6 lg:px-4 py-3 rounded-[50px] focus:outline-[#48A7FD] text-white"
           type="text"
           placeholder="Name"
         />
         <input
-          class="bg-gray-500 px-6 lg:px-4 py-3 rounded-[50px]"
+          class="bg-gray-500 px-6 lg:px-4 py-3 rounded-[50px] focus:outline-[#48A7FD] text-white"
           type="email"
           placeholder="E-mail Address"
         />
         <input
-          class="bg-gray-500 px-6 lg:px-4 py-3 rounded-[50px]"
+          class="bg-gray-500 px-6 lg:px-4 py-3 rounded-[50px] focus:outline-[#48A7FD]"
           type="password"
           placeholder="Password"
         />
         <button
-          class="text-white bg-[#48A7FD] ssm:px-20 lg:px-8 py-3 rounded-[50px] text-[12px]"
+          class="text-white bg-[#48A7FD] ssm:px-20 lg:px-8 py-3 rounded-[50px] text-[12px] hover:bg-gray-500 border border-[#48A7FD]"
         >
           Sign Up
         </button>
@@ -695,31 +701,45 @@
         class="ssm:grid ssm:grid-cols-2 ssm:grid-rows-2 ssm:justify-items-center ssm:items-start ssm:gap-8 lg:flex lg:flex-row lg:justify-around lg:items-baseline ssm:flex-wrap ssm:w-[90vw] lg:w-[100%]"
       >
         <ul class="flex flex-col justify-center items-start gap-3 text-white">
-          <li><strong>Company</strong></li>
-          <li>About Us</li>
-          <li>Contact Us</li>
-          <li>Carier</li>
-          <li>Blog</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            <strong>Company</strong>
+          </li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">About Us</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Contact Us</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Carier</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Blog</li>
         </ul>
         <ul class="flex flex-col justify-center items-start gap-3 text-white">
-          <li><strong>Features</strong></li>
-          <li>Domain</li>
-          <li>Hosting</li>
-          <li>Wordpress</li>
-          <li>Web Security</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            <strong>Features</strong>
+          </li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Domain</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Hosting</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Wordpress</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            Web Security
+          </li>
         </ul>
         <ul class="flex flex-col justify-center items-start gap-3 text-white">
-          <li><strong>Help</strong></li>
-          <li>Payment Method</li>
-          <li>Knoew Ledgebase</li>
-          <li>Tutorials</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            <strong>Help</strong>
+          </li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            Payment Method
+          </li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            Knoew Ledgebase
+          </li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Tutorials</li>
         </ul>
         <ul class="flex flex-col justify-center items-start gap-3 text-white">
-          <li><strong>Social Media</strong></li>
-          <li>Instagram</li>
-          <li>Twitter</li>
-          <li>Facebook</li>
-          <li>Youtube</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">
+            <strong>Social Media</strong>
+          </li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Instagram</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Twitter</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Facebook</li>
+          <li class="hover:text-[#48A7FD] hover:cursor-pointer">Youtube</li>
         </ul>
       </div>
 
